--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ github_username: theTutorB
 
 # Build settings
 markdown: kramdown
-# theme: minima
+theme: minima
 plugins:
   - jekyll-feed
   - jekyll-paginate
